--- a/views/login.hbs
+++ b/views/login.hbs
@@ -22,6 +22,6 @@
 
     <section class="forgot">
         <p>If you don't have an account yet, contact your manager.</p>
-        <a href="/forgot"><b>Forgot your password?</b></a>
+        <a href="/forgot-password"><b>Forgot your password?</b></a>
     </section>
 </div>
