--- a/public/common/login.css
+++ b/public/common/login.css
@@ -1,83 +1,76 @@
-:root {
-	--login-border: #686868aa;
-	--login-bg: #1f1f1fee;
-	--login-field-bg: #3B383388;
-	--login-field-fg: #989898;
-	--login-hover-bg: #3b3b3bee;
-}
-
 body {
-	margin: 0;
+    margin: 0;
+    user-select: none;
 }
 
 a {
-	color: var(--main-fg);
-	text-decoration: underline;
+    color: var(--main-fg);
+    text-decoration: underline;
 }
 
 .sunlight {
-	z-index: 100;
+    z-index: 100;
 }
 
 .login-form {
-	color: var(--sidebar-fg);
-	width: 40vw;
-	min-height: fit-content;
-	height: 100vh;
-	background-color: var(--login-bg);
-	backdrop-filter: blur(52px);
-	border-right: 1px solid var(--login-border);
-	border-radius: 0px;
-	display: flex;
-	flex-direction: column;
-	gap: 8rem;
+    color: var(--sidebar-fg);
+    width: 40vw;
+    min-height: fit-content;
+    height: 100vh;
+    background-color: var(--login-bg);
+    backdrop-filter: blur(52px);
+    border-right: 1px solid var(--login-border);
+    border-radius: 0px;
+    display: flex;
+    flex-direction: column;
+    gap: 8rem;
 }
 
 .forgot {
-	text-align: center;
+    text-align: center;
 }
 
 .login-input-form {
-	display: flex;
-	flex-direction: column;
-	gap: var(--medium-gap);
+    display: flex;
+    flex-direction: column;
+    gap: var(--medium-gap);
 }
 
 .login-field {
-	width: 100%;
-	background-color: var(--login-field-bg);
-	color: var(--main-fg);
-	font-family: var(--main-font);
-	padding: var(--medium-gap);
-	box-sizing: border-box;
-	border-radius: var(--input-field-radius);
-	border: 1px solid var(--login-border);
+    width: 100%;
+    background-color: var(--login-field-bg);
+    color: var(--main-fg);
+    font-family: var(--main-font);
+    padding: var(--medium-gap);
+    box-sizing: border-box;
+    border-radius: var(--input-field-radius);
+    border: 1px solid var(--login-border);
 }
 
 .login-button {
-	background-color: var(--login-field-bg);
-	color: var(--main-fg);
-	border: 1px solid var(--login-border);
-	font-family: var(--main-font);
+    background-color: var(--login-field-bg);
+    color: var(--main-fg);
+    border: 1px solid var(--login-border);
+    font-family: var(--main-font);
 }
 
 .login-field, .login-button {
-	transition: color 0.15s, background-color 0.15s;
+    transition: color 0.15s, background-color 0.15s;
 }
 
 .login-button:hover, .login-field:hover {
-	background-color: var(--login-hover-bg);
+    background-color: var(--login-hover-bg);
 }
 
 .login-button:active {
-	background-color: var(--accent-light);
-	color: var(--accent-dark);
-	border-color: var(--accent-dark);
+    background-color: var(--accent-light);
+    color: var(--accent-dark);
+    border-color: var(--accent-dark);
 }
 
 @media screen and (max-width: 800px) {
-	.login-form {
-		width: 100vw;
-		padding: var(--medium-gap);
-	}
+    .login-form {
+        width: 100vw;
+        padding: var(--medium-gap);
+    }
 }
