fix: sidebar scale

--- a/views/partials/sidebar.hbs
+++ b/views/partials/sidebar.hbs
@@ -1,6 +1,6 @@
 <div class="sunlight"></div>
 
-<nav class="global-sidebar container">
+<nav class="global-sidebar">
     <section>
         <header class="logo">
             <div class="logo-image"></div>
