--- a/public/common/global.css
+++ b/public/common/global.css
@@ -31,6 +31,7 @@
     --medium-gap: 1rem;
     --big-gap: 2rem;
     --container-padding: 1.5rem 3rem;
+    --sidebar-padding: 1.5rem;
 
     --main-font: 'Space Grotesk', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
@@ -51,13 +52,15 @@ a {
 .global-sidebar {
     background-color: var(--sidebar-bg);
     color: var(--sidebar-fg);
-    width: 30vw;
+    flex: 30%;
     height: calc(100vh - var(--medium-gap));
     box-sizing: border-box;
     border-radius: var(--container-radius);
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    padding: var(--sidebar-padding);
+    overflow-y: scroll;
 }
 
 .sunlight {
@@ -138,6 +141,7 @@ a {
     list-style-type: none;
     border-radius: var(--button-radius);
     padding: var(--medium-gap);
+    font-size: 0.9rem;
 }
 
 .nav-link i, .nav-link p {
