--- a/views/partials/sidebar.hbs
+++ b/views/partials/sidebar.hbs
@@ -11,7 +11,7 @@
     <section>
         <ul class="nav-link-section">
             {{#if (eq page "upcoming-events")}}
-                <a class="nav-link-wrapper" href="/upcoming-events">
+                <a class="nav-link-wrapper" href="/">
                     <li class="nav-link" id="active-link">
                         <div class="link-name">
                             <i class="lni lni-calendar-days"></i>
@@ -21,7 +21,7 @@
                     </li>
                 </a>
             {{else}}
-                <a class="nav-link-wrapper" href="/upcoming-events">
+                <a class="nav-link-wrapper" href="/">
                     <li class="nav-link">
                         <div class="link-name">
                             <i class="lni lni-calendar-days"></i>
@@ -54,15 +54,27 @@
 
     <section>
         <ul class="nav-link-section">
-            <a class="nav-link-wrapper" href="/notifications">
-                <li class="nav-link notifications-page-link">
-                    <div class="link-name">
-                        <i class="lni lni-bell-1"></i>
-                        <p>Notifications</p>
-                    </div>
-                    <i class="lni lni-arrow-right"></i>
-                </li>
-            </a>
+            {{#if (eq page "notifications")}}
+                <a class="nav-link-wrapper" href="/notifications">
+                    <li class="nav-link notifications-page-link" id="active-link">
+                        <div class="link-name">
+                            <i class="lni lni-bell-1"></i>
+                            <p>Notifications</p>
+                        </div>
+                        <i class="lni lni-arrow-right"></i>
+                    </li>
+                </a>
+            {{else}}
+                <a class="nav-link-wrapper" href="/notifications">
+                    <li class="nav-link notifications-page-link">
+                        <div class="link-name">
+                            <i class="lni lni-bell-1"></i>
+                            <p>Notifications</p>
+                        </div>
+                        <i class="lni lni-arrow-right"></i>
+                    </li>
+                </a>
+            {{/if}}
             <a class="nav-link-wrapper" href="/profile">
                 <li class="nav-link accounts-page-link">
                     <div class="link-name">
