--- a/views/notifications.hbs
+++ b/views/notifications.hbs
@@ -1,4 +1,13 @@
 {{>sidebar}}
 <section class="main-content container">
-    
+    <h1 class="header"> Notifications </h1>
+    <div class="notification-list">
+        {{>notification}}
+        {{>notification}}
+        {{>notification}}
+        {{>notification}}
+        {{>notification}}
+        {{>notification}}
+        {{>notification}}
+    </div>
 </section>
