--- a/public/common/global.css
+++ b/public/common/global.css
@@ -24,6 +24,7 @@
     --medium-gap: 1rem;
     --big-gap: 2rem;
     --container-padding: 1.5rem 3rem;
+    --sidebar-padding: 1.5rem;
 
     --main-font: 'Space Grotesk', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
@@ -44,13 +45,15 @@ a {
 .global-sidebar {
     background-color: var(--sidebar-bg);
     color: var(--sidebar-fg);
-    width: 30vw;
+    flex: 30%;
     height: calc(100vh - var(--medium-gap));
     box-sizing: border-box;
     border-radius: var(--container-radius);
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    padding: var(--sidebar-padding);
+    overflow-y: scroll;
 }
 
 .sunlight {
@@ -62,6 +65,7 @@ a {
     filter: blur(52px);
     border-radius: var(--circle-radius);
     z-index: -5;
+    font-size: 0.9rem;
 }
 
 .logo {
@@ -97,11 +101,14 @@ a {
 }
 
 .nav-link-section {
+    display: flex;
+    flex-direction: column;
+    gap: var(--small-gap);
     list-style: none;
     padding-left: 0;
 }​
 
-nav-link-wrapper {
+.nav-link-wrapper {
     text-decoration: none;
 }
 
@@ -109,6 +116,7 @@ nav-link-wrapper {
     display: flex;
     flex-direction: row;
     align-items: center;
+    justify-content: space-between;
     gap: var(--medium-gap);
     list-style-type: none;
     border-radius: var(--button-radius);
@@ -124,15 +132,29 @@ nav-link-wrapper {
     font-size: 1.5rem;
 }
 
-.nav-link:active {
-    background-color: var(--accent-light);
-}
-
-.nav-link:hover > *, .nav-link:hover > .profile-info p {
+.nav-link:hover > .link-name > *,
+.nav-link:hover > *,
+.nav-link:hover > .link-name > .profile-info p {
     color: var(--accent-light);
 }
 
-.nav-link:active > *, .nav-link:active > .profile-info p {
+.nav-link:active > .link-name > *,
+.nav-link:active > *,
+.nav-link:active > .link-name > .profile-info p {
+    color: var(--accent-dark);
+}
+
+#active-link {
+    background-color: var(--accent-light);
+}
+
+.link-name {
+    display: flex;
+    gap: var(--medium-gap);
+    align-items: center;
+}
+
+#active-link > .link-name > *, #active-link > *{
     color: var(--accent-dark);
 }
 
@@ -157,4 +179,260 @@ nav-link-wrapper {
     width: 100%;
     height: calc(100vh - var(--medium-gap));
     background-color: var(--primary-bg);
+    overflow-y: auto;
+    position: relative;
+}
+
+.event-box {
+    box-sizing: border-box;
+    display: grid;
+    grid-auto-flow: row;
+    grid-row-gap: var(--medium-gap);
+    width: 100%;
+    background-color: #FFFFFF;
+    padding: 30px;
+    border-radius: 24px;
+    box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.1);
+    transition: all 0.5s ease;
+    overflow: hidden;
+    cursor: pointer;
+    position: relative;
+}
+
+.event-box-top {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+#event-name {
+    font-size: 1.1rem;
+    float: left;
+    font-weight: 500;
+}
+
+#client-name {
+    font-size: 0.9rem;
+    float: right;
+}
+
+#details-top-box {
+    font-size: 1.5rem;
+}
+
+.event-box-bottom{
+    gap: var(--medium-gap);
+}
+
+.event-box-bottom > div {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+}
+
+#details-box {
+    display: flex;
+    flex-direction: column;
+    gap: var(--medium-gap);
+}
+
+.event-box-bottom span {
+    display: inline-block;
+    margin-bottom: var(--small-gap);
+    font-size: 0.8rem;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+            line-clamp: 2;
+    -webkit-box-orient: vertical;
+}
+
+.back-button {
+    box-sizing: border-box;
+    width: fit-content;
+    background: none;
+    border: none;
+    padding: 0rem 1rem;
+}
+
+.back-button-wrapper {
+    color: var(--primary-fg);
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: var(--small-gap);
+    list-style-type: none;
+    font-size: 1rem;
+    font-family: var(--main-font);
+}
+
+.back-button-wrapper i {
+    font-size: 1.5rem;
+    margin-right: 0.1rem;
+}
+
+.event-details {
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+    z-index: 10;
+    padding: var(--container-padding);
+    margin: 1.5rem;
+    background-color: var(--card-bg);
+}
+
+.upcoming-events-container {
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    gap: var(--medium-gap);
+}
+
+.fg-button {
+    box-sizing: border-box;
+    width: fit-content;
+    background-color: var(--primary-fg);
+    border-radius: var(--button-radius);
+    padding: 0rem 1rem;
+    border: 0;
+    border: 0.08rem solid rgba(0,0,0,0);
+}
+
+.fg-button:hover {
+    background: none;
+    border: solid 0.08rem;
+    border-color: var(--primary-fg);
+}
+
+.fg-button-wrapper {
+    color: var(--primary-bg);
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: var(--small-gap);
+    list-style-type: none;
+    font-size: 0.8rem;
+    font-family: var(--main-font);
+}
+
+.fg-button-wrapper:hover {
+    color: var(--primary-fg);
+}
+
+.fg-button-wrapper i {
+    font-size: 1.1rem;
+    margin-right: 0.1rem;
+}
+
+.bg-button {
+    box-sizing: border-box;
+    width: fit-content;
+    background: none;
+    border-radius: var(--button-radius);
+    padding: 0rem 1rem;
+    border: 0.08rem solid var(--primary-fg);
+}
+
+.bg-button-wrapper {
+    color: var(--primary-fg);
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: var(--small-gap);
+    list-style-type: none;
+    font-size: 0.8rem;
+    font-family: var(--main-font);
+}
+
+.bg-button-wrapper i {
+    font-size: 1.1rem;
+    margin-right: 0.1rem;
+}
+
+.top-page-bar{
+    display: flex;
+    align-items: left;
+    gap: var(--medium-gap);
+}
+
+.search-bar {
+    display: flex;
+    align-items: center;
+    width: 40%;
+    background-color: var(--primary-bg);
+    border-radius: var(--container-radius);
+    border-style: solid;
+    border-width: 0.1rem;
+    border-color: var(--border-light);
+    padding: 0.4rem 1rem;
+    gap: var(--small-gap);
+}
+
+.search-bar input {
+    background: transparent;
+    flex: 1;
+    border: 0;
+    outline: none;
+    font-family: var(--main-font);
+    font-size: 0.8rem;
+    color: var(--primary-fg);
+    padding: 0.3rem 0;
+}
+
+.search-bar ::placeholder {
+    color: var(--border-light);
+}
+.search-bar button {
+    background: transparent;
+    border: 0;
+    outline: none;
+    color: var(--border-light);
+    font-size: 1.5rem;
+    margin: 0;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+}
+
+.event-list-top {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: var(--medium-gap);
+    margin-top: var(--medium-gap);
+}
+
+.members-box {
+    background-color: var(--primary-bg);
+    color: var(--secondary-fg);
+    padding: var(--container-padding);
+    border-radius: var(--container-radius);
+}
+
+.team-members {
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    gap: var(--medium-gap);
+}
+
+.event-details {
+    gap: var(--medium-gap);
+}
+
+#details-edit-button {
+    margin-left: auto; 
+    margin-right: 0;
+}
+
+.choice-buttons {
+    gap: var(--small-gap);
+    display: flex; 
+    align-items: center;
+}
+
+#details-choices {
+    margin-left: auto; 
+    margin-right: 0;
 }
