--- a/views/partials/sidebar.hbs
+++ b/views/partials/sidebar.hbs
@@ -1,6 +1,6 @@
 <div class="sunlight"></div>
 
-<nav class="global-sidebar container">
+<nav class="global-sidebar">
     <section>
         <header class="logo">
             <div class="logo-image"></div>
@@ -10,22 +10,43 @@
 
     <section>
         <ul class="nav-link-section">
-            <a class="nav-link-wrapper" href="/upcoming-events">
-                <li class="nav-link">
-                    <i class="lni lni-calendar-days"></i>
-                    <p>Upcoming events</p>
-                </li>
-            </a>
+            {{#if (eq page "upcoming-events")}}
+                <a class="nav-link-wrapper" href="/eventList">
+                    <li class="nav-link" id="active-link">
+                        <div class="link-name">
+                            <i class="lni lni-calendar-days"></i>
+                            <p>Upcoming events</p>
+                        </div>
+                        <i class="lni lni-arrow-right"></i>
+                    </li>
+                </a>
+            {{else}}
+                <a class="nav-link-wrapper" href="/upcoming-events">
+                    <li class="nav-link">
+                        <div class="link-name">
+                            <i class="lni lni-calendar-days"></i>
+                            <p>Upcoming events</p>
+                        </div>
+                        <i class="lni lni-arrow-right"></i>
+                    </li>
+                </a>
+            {{/if}}
             <a class="nav-link-wrapper" href="/past-events">
                 <li class="nav-link">
-                    <i class="lni lni-alarm-1"></i>
-                    <p>Past events</p>
+                    <div class="link-name">
+                        <i class="lni lni-alarm-1"></i>
+                        <p>Past events</p>
+                    </div>
+                    <i class="lni lni-arrow-right"></i>
                 </li>
             </a>
             <a class="nav-link-wrapper" href="/team">
                 <li class="nav-link">
-                    <i class="lni lni-user-multiple-4"></i>
-                    <p>Team</p>
+                    <div class="link-name">
+                        <i class="lni lni-user-multiple-4"></i>
+                        <p>Team</p>
+                    </div>
+                    <i class="lni lni-arrow-right"></i>
                 </li>
             </a>
         </ul>
@@ -35,17 +56,23 @@
         <ul class="nav-link-section">
             <a class="nav-link-wrapper" href="/notifications">
                 <li class="nav-link notifications-page-link">
-                    <i class="lni lni-bell-1"></i>
-                    <p>Notifications</p>
+                    <div class="link-name">
+                        <i class="lni lni-bell-1"></i>
+                        <p>Notifications</p>
+                    </div>
+                    <i class="lni lni-arrow-right"></i>
                 </li>
             </a>
             <a class="nav-link-wrapper" href="/profile">
                 <li class="nav-link accounts-page-link">
-                    <div class="profile-picture image"></div>
-                    <div class="profile-info">
-                        <p class="username">John Doe</p>
-                        <p class="user-role">Manager</p>
+                    <div class="link-name">
+                        <div class="profile-picture image"></div>
+                        <div class="profile-info">
+                            <p class="username">John Doe</p>
+                            <p class="user-role">Manager</p>
+                        </div>
                     </div>
+                    <i class="lni lni-arrow-right"></i>
                 </li>
             </a>
         </ul>
