fix: design continuity between notification and event list pages

--- a/views/notifications.hbs
+++ b/views/notifications.hbs
@@ -1,7 +1,7 @@
 {{>sidebar}}
 <section class="main-content container">
     <h1 class="header"> Notifications </h1>
-    <div class="notification-list">
+    <div class="upcoming-events-container">
         {{>notification}}
         {{>notification}}
         {{>notification}}
