--- a/views/partials/notification.hbs
+++ b/views/partials/notification.hbs
@@ -1,22 +1,31 @@
-<div class="info-container">
-    <div class="event-header">
-        <h3 class="info-title">Event name</h3>
-        <p class="info-client">Client name</p>
+<div class="event-box container">
+    <div class="event-box-top">
+        <span id="event-name">Event Name</span>
+        <span id="client-name">Client Name</span>
     </div>
-    <p class="info-date">Date</p>
-    <p class="info-desc-header">Description</p>
-    <p class="info-desc">Culpa sunt qui enim quis quis dolore labore aliquip qui eu veniam dolore officia officia veniam. Et nulla esse quis nostrud dolore ex nostrud esse. Laboris labore veniam ut. Duis laboris in id adipisicing et consequat sunt ullamco anim in sunt consequat irure ad. Irure occaecat est exercitation.</p>
-    <div class="notif-footer">
-        <p class="notif-expiry">Invitation expires in 3 days.</p>
-        <div class="notif-controls">
-            <button class="button">
-                <i class="lni lni-thumbs-down-3"></i>
-                <p>Not available</p>
+    <div class="event-box-bottom">
+        <span id="date">Date</span>
+        <span>Description</span>
+        <span id="description">Duis sunt dolor cupidatat incididunt magna eiusmod adipisicing 
+            fugiat reprehenderit. Aute et dolore ullamco mollit ex laborum ea 
+            magna consectetur minim reprehenderit fugiat aliqua cillum do. Sunt culpa 
+            incididunt dolor Lorem velit qui officia deserunt elit incididunt duis cupidatat nisi do officia.</span>
+    </div>
+    <div class="notif-controls">
+        <span class="notif-expiry">Invitation expires in 3 days.</span>
+        <div class="notif-buttons">
+            <button class="bg-button">
+                <a class="bg-button-wrapper" href="#">
+                    <i class="lni lni-thumbs-down-3"></i>
+                    <p>Not available</p>
+                </a>
             </button>
 
-            <button class="button focus-button">
-                <i class="lni lni-thumbs-up-3"></i>
-                <p>Available</p>
+            <button class="fg-button">
+                <a class="fg-button-wrapper" href="#">
+                    <i class="lni lni-thumbs-up-3"></i>
+                    <p>Available</p>
+                </a>
             </button>
         </div>
     </div>
