--- a/views/eventDetails.hbs
+++ b/views/eventDetails.hbs
@@ -25,19 +25,22 @@
         </div>
 
         <div class="event-box-bottom" id="details-box">
-            <div>
+            <span id="date-loc">
                 <span id="date"></span>
-            </div>
-            <div class="contact">
-                <span>Contact Person</span>
-                <span id="contact-name">Contact Name</span>
-                <span id="contact-info">Contact Information</span>
-            </div>
-            <div class="description">
-                <span>Description</span>
+                <span id="location"></span>
+            </span>
+            <span id="contact">
+                <span><strong>Contact Person</strong></span>
+                <span id="contact-name"></span>
+                <span id="contact-info"></span>
+            </span>
+            <span id="description-span">
+                <span><strong>Description</strong></span>
                 <span id="description"></span>
-            </div>
+            </span>
         </div>
+
+        <span id="status"></span>
 
         <div class="choice-buttons" id="details-choices">
             <button class="bg-button" id="cancel-button">
