--- a/views/partials/eventBox.hbs
+++ b/views/partials/eventBox.hbs
@@ -1,15 +1,18 @@
-<div class="event-box container">
+<div class="event-box container"
+    data-cp-first-name="{{CPFirstName}}"
+    data-cp-last-name="{{CPLastName}}"
+    data-cp-contact-no="{{CPContactNo}}"
+>
     <div class="event-box-top">
-        <span id="event-name">Event Name</span>
-        <span id="client-name">Client Name</span>
+        <span id="event-name">{{eventName}}</span>
+        <span id="client-name">{{clientFirstName}} {{clientLastName}}</span>
     </div>
     
     <div class="event-box-bottom">
-        <span id="date">Date</span>
-        <span>Description</span>
-        <span id="description">Duis sunt dolor cupidatat incididunt magna eiusmod adipisicing 
-            fugiat reprehenderit. Aute et dolore ullamco mollit ex laborum ea 
-            magna consectetur minim reprehenderit fugiat aliqua cillum do. Sunt culpa 
-            incididunt dolor Lorem velit qui officia deserunt elit incididunt duis cupidatat nisi do officia.</span>
+        <span id="date">{{eventDate}}</span>
+        <span id="location">{{location}}</span>
+        <span><strong>Description</strong></span>
+        <span id="description">{{description}}</span>
+        <span id="status" data-status="{{status}}"><strong>● Status:</strong> {{status}}</span>
     </div>
 </div>
