--- a/public/common/global.css
+++ b/public/common/global.css
@@ -119,18 +119,6 @@ a {
     border-radius: var(--circle-radius);
 }
 
-.button {
-    border-radius: var(--button-radius);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: var(--small-gap);
-}
-
-.button i {
-    font-size: var(--icon-size);
-}
-
 .nav-link-section {
     display: flex;
     flex-direction: column;
@@ -142,7 +130,7 @@ a {
     padding-left: 0;
 }​
 
-..nav-link-wrapper {
+.nav-link-wrapper {
     text-decoration: none;
 }
 
@@ -167,6 +155,12 @@ a {
     font-size: var(--icon-size);
 }
 
+.link-name {
+    display: flex;
+    align-items: center;
+    gap: var(--small-gap);
+}
+
 .nav-link:hover > .link-name > *,
 .nav-link:hover > *,
 .nav-link:hover > .link-name > .profile-info p {
@@ -181,6 +175,10 @@ a {
 
 #active-link {
     background-color: var(--accent-light);
+}
+
+#active-link * {
+    color: var(--accent-dark);
 }
 
 .nav-link:hover > *, .nav-link:hover > .profile-info p {
@@ -253,7 +251,7 @@ a {
     font-size: 1.5rem;
 }
 
-.event-box-bottom{
+.event-box-bottom {
     gap: var(--medium-gap);
 }
 
@@ -278,6 +276,14 @@ a {
     -webkit-line-clamp: 2;
             line-clamp: 2;
     -webkit-box-orient: vertical;
+}
+
+.notif-controls {
+    width: 100%;
+    align-items: center;
+    justify-content: space-between;
+    flex-direction: row;
+    font-size: 0.8rem;
 }
 
 .back-button {
@@ -335,7 +341,16 @@ a {
 .fg-button:hover {
     background: none;
     border: solid 0.08rem;
-    border-color: var(--primary-fg);
+    border-color: var(--accent-light);
+    background-color: var(--accent-light);
+}
+
+.fg-button:hover .fg-button-wrapper {
+    color: var(--accent-dark);
+}
+
+.fg-button i {
+    font-size: var(--icon-size);
 }
 
 .fg-button-wrapper {
@@ -349,15 +364,6 @@ a {
     font-family: var(--main-font);
 }
 
-.fg-button-wrapper:hover {
-    color: var(--primary-fg);
-}
-
-.fg-button-wrapper i {
-    font-size: 1.1rem;
-    margin-right: 0.1rem;
-}
-
 .bg-button {
     box-sizing: border-box;
     width: fit-content;
@@ -365,6 +371,10 @@ a {
     border-radius: var(--button-radius);
     padding: 0rem 1rem;
     border: 0.08rem solid var(--primary-fg);
+}
+
+.bg-button i {
+    font-size: var(--icon-size);
 }
 
 .bg-button-wrapper {
@@ -378,12 +388,12 @@ a {
     font-family: var(--main-font);
 }
 
-.bg-button-wrapper i {
-    font-size: 1.1rem;
-    margin-right: 0.1rem;
+.focus-button {
+    background-color: var(--primary-fg);
+    color: var(--primary-bg);
 }
 
-.top-page-bar{
+.top-page-bar {
     display: flex;
     align-items: left;
     gap: var(--medium-gap);
@@ -413,9 +423,10 @@ a {
     padding: 0.3rem 0;
 }
 
-.search-bar ::placeholder {
+.search-bar::placeholder {
     color: var(--border-light);
 }
+
 .search-bar button {
     background: transparent;
     border: 0;
@@ -426,105 +437,4 @@ a {
     display: flex;
     align-items: center;
     cursor: pointer;
-}
-
-.event-list-top {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: var(--medium-gap);
-    margin-top: var(--medium-gap);
-}
-
-.members-box {
-    background-color: var(--primary-bg);
-    color: var(--secondary-fg);
-    padding: var(--container-padding);
-    border-radius: var(--container-radius);
-}
-
-.team-members {
-    box-sizing: border-box;
-    display: flex;
-    flex-direction: column;
-    gap: var(--medium-gap);
-}
-
-.event-details {
-    gap: var(--medium-gap);
-}
-
-#details-edit-button {
-    margin-left: auto; 
-    margin-right: 0;
-}
-
-.choice-buttons {
-    gap: var(--small-gap);
-    display: flex; 
-    align-items: center;
-}
-
-#details-choices {
-    margin-left: auto; 
-    margin-right: 0;
-}
-
-.info-container {
-    width: 100%;
-    padding: var(--card-padding);
-    box-sizing: border-box;
-    background-color: var(--card-bg);
-    display: flex;
-    flex-direction: column;
-    align-items: start;
-    border-radius: var(--card-radius);
-    box-shadow: var(--card-shadow);
-}
-
-.info-container * {
-    margin: 0;
-}
-
-.info-title {
-    font-weight: normal;
-}
-
-.info-desc-header {
-    margin-top: var(--small-gap);
-    color: var(--secondary-fg);
-}
-
-.event-header {
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.button {
-    border-radius: var(--button-radius);
-    border: 1px solid var(--primary-fg);
-    color: var(--primary-fg);
-    background-color: transparent;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-family: var(--main-font);
-    padding: var(--small-gap);
-    gap: var(--small-gap);
-}
-
-.button i {
-    font-size: var(--icon-size);
-}
-
-.button:hover {
-    color: var(--accent-medium);
-}
-
-.focus-button {
-    background-color: var(--primary-fg);
-    color: var(--primary-bg);
 }
