--- a/views/eventDetails.hbs
+++ b/views/eventDetails.hbs
@@ -12,8 +12,8 @@
     </div>
 
     <div class="event-details container">
-        <button class="bg-button" id="details-edit-button">
-            <a class="bg-button-wrapper" href="#">
+        <button class="bg-button button" id="details-edit-button">
+            <a class="bg-button-wrapper button-wrapper" href="#">
                 <i class="lni lni-pencil-1"></i>
                 <p>Edit</p>
             </a>
@@ -43,14 +43,14 @@
         <span id="status"></span>
 
         <div class="choice-buttons" id="details-choices">
-            <button class="bg-button" id="cancel-button">
-                <a class="bg-button-wrapper" href="#">
+            <button class="bg-button button" id="cancel-button">
+                <a class="bg-button-wrapper button-wrapper" href="#">
                     <i class="lni lni-xmark"></i>
                     <p>Cancel</p>
                 </a>
             </button>
-            <button class="fg-button" id="mark-done-button">
-                <a class="fg-button-wrapper" href="#">
+            <button class="fg-button button" id="mark-done-button">
+                <a class="fg-button-wrapper button-wrapper" href="#">
                     <i class="lni lni-check"></i>
                     <p>Mark as done</p>
                 </a>
