--- a/views/eventList.hbs
+++ b/views/eventList.hbs
@@ -9,8 +9,8 @@
             <input type="search" name="q" placeholder="Search...">
         </form>
 
-        <div class="fg-button">
-            <a class="fg-button-wrapper" href="#">
+        <div class="fg-button button">
+            <a class="fg-button-wrapper button-wrapper" href="#">
                 <i class="lni lni-plus"></i>
                 <p>Create</p>
             </a>
