--- a/views/forgot.hbs
+++ b/views/forgot.hbs
@@ -8,8 +8,10 @@
         to send you a temporary password so you can access your account.
     </p>
     <button class="login-button button">
-        <i class="lni lni-envelope-1"></i>
-        <p>Request password reset</p>
+        <a class="login-button-wrapper button-wrapper" href="#">
+            <i class="lni lni-envelope-1"></i>
+            <p>Request password reset</p>
+        </a>
     </button>
 
     <a href="/login"><b>Back to login</b></a>
