--- a/views/login.hbs
+++ b/views/login.hbs
@@ -14,8 +14,10 @@
             <input type="text" placeholder="Mobile number" name="number" class="login-field" />
             <input type="text" placeholder="Password" name="password" class="login-field" />
             <button class="login-button button">
-                <i class="lni lni-enter"></i>
-                <p>Login</p>
+                <a class="login-button-wrapper button-wrapper" href="#">
+                    <i class="lni lni-enter"></i>
+                    <p>Login</p>
+                </a>
             </button>
         </form>
     </section>
