--- a/views/partials/notification.hbs
+++ b/views/partials/notification.hbs
@@ -14,15 +14,15 @@
     <div class="notif-controls">
         <span class="notif-expiry">Invitation expires in 3 days.</span>
         <div class="notif-buttons">
-            <button class="bg-button">
-                <a class="bg-button-wrapper" href="#">
+            <button class="bg-button button">
+                <a class="bg-button-wrapper button-wrapper" href="#">
                     <i class="lni lni-thumbs-down-3"></i>
                     <p>Not available</p>
                 </a>
             </button>
 
-            <button class="fg-button">
-                <a class="fg-button-wrapper" href="#">
+            <button class="fg-button button">
+                <a class="fg-button-wrapper button-wrapper" href="#">
                     <i class="lni lni-thumbs-up-3"></i>
                     <p>Available</p>
                 </a>
