--- a/public/common/global.css
+++ b/public/common/global.css
@@ -41,7 +41,7 @@
     --sidebar-padding: 1.5rem;
 
     --main-font: 'Space Grotesk', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    --icon-size: 1.5rem;
+    --icon-size: 1.2rem;
 }
 
 body {
@@ -348,19 +348,33 @@ a {
     gap: var(--medium-gap);
 }
 
-.fg-button {
+.button {
     box-sizing: border-box;
-    width: fit-content;
-    background-color: var(--primary-fg);
     border-radius: var(--button-radius);
     padding: 0rem 1rem;
-    border: 0;
-    border: 0.08rem solid rgba(0,0,0,0);
+}
+
+.button-wrapper {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: var(--small-gap);
+    list-style-type: none;
+    font-size: 0.8rem;
+    font-family: var(--main-font);
+}
+
+.button-wrapper i {
+    font-size: var(--icon-size);
+}
+
+.fg-button {
+    border: 1px solid var(--primary-fg);
+    background-color: var(--primary-fg);
 }
 
 .fg-button:hover {
     background: none;
-    border: solid 0.08rem;
     border-color: var(--accent-light);
     background-color: var(--accent-light);
 }
@@ -369,43 +383,25 @@ a {
     color: var(--accent-dark);
 }
 
-.fg-button i {
-    font-size: var(--icon-size);
-}
-
 .fg-button-wrapper {
     color: var(--primary-bg);
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    gap: var(--small-gap);
-    list-style-type: none;
-    font-size: 0.8rem;
-    font-family: var(--main-font);
 }
 
 .bg-button {
-    box-sizing: border-box;
-    width: fit-content;
     background: none;
-    border-radius: var(--button-radius);
-    padding: 0rem 1rem;
-    border: 0.08rem solid var(--primary-fg);
+    border: 1px solid var(--primary-fg);
 }
 
-.bg-button i {
-    font-size: var(--icon-size);
+.bg-button:hover {
+    border: 1px solid var(--accent-medium);
+}
+
+.bg-button:hover .bg-button-wrapper {
+    color: var(--accent-medium);
 }
 
 .bg-button-wrapper {
     color: var(--primary-fg);
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    gap: var(--small-gap);
-    list-style-type: none;
-    font-size: 0.8rem;
-    font-family: var(--main-font);
 }
 
 .focus-button {
