feat: sidebar collapses when window is too narrow

--- a/views/partials/sidebar.hbs
+++ b/views/partials/sidebar.hbs
@@ -1,5 +1,10 @@
 <div class="sunlight"></div>
 
+<nav class="mobile-top-bar">
+    <button class="mobile-top-bar-button button">
+        <i class="lni lni-menu-hamburger-1"></i>
+</button>
+</nav>
 <nav class="global-sidebar">
     <section>
         <header class="logo">
