--- a/public/common/global.css
+++ b/public/common/global.css
@@ -35,9 +35,8 @@
     --medium-gap: 1rem;
     --big-gap: 2rem;
     
-    --container-padding: 1.5rem 3rem;
+    --container-padding: 1.5rem 2.5rem;
     --card-padding: 1.25rem 2rem;
-    --sidebar-padding: 1.5rem;
     --sidebar-padding: 1.5rem;
 
     --main-font: 'Space Grotesk', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -61,6 +60,7 @@ a {
     background-color: var(--sidebar-bg);
     color: var(--sidebar-fg);
     flex: 30%;
+    min-width: 280px;
     height: calc(100vh - var(--medium-gap));
     box-sizing: border-box;
     border-radius: var(--container-radius);
@@ -69,6 +69,10 @@ a {
     justify-content: space-between;
     padding: var(--sidebar-padding);
     overflow-y: scroll;
+}
+
+.mobile-top-bar {
+    display: none;
 }
 
 .sunlight {
@@ -81,7 +85,6 @@ a {
     border-radius: var(--circle-radius);
     z-index: -5;
     pointer-events: none;
-    font-size: 0.9rem;
 }
 
 .logo {
@@ -322,22 +325,6 @@ a {
     font-family: var(--main-font);
 }
 
-.back-button-wrapper i {
-    font-size: 1.5rem;
-    margin-right: 0.1rem;
-}
-
-.event-details {
-    box-sizing: border-box;
-    display: flex;
-    flex-direction: column;
-    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-    z-index: 10;
-    padding: var(--container-padding);
-    margin: 1.5rem;
-    background-color: var(--card-bg);
-}
-
 .upcoming-events-container {
     box-sizing: border-box;
     display: flex;
@@ -470,4 +457,42 @@ a {
 
 #status[data-status="completed"] {
     color: var(--success-light);
+}
+
+@media screen and (max-width: 800px) {
+    * {
+        --icon-size: 1.5rem;
+        --top-bar-height: 3rem;
+    }
+    
+    body {
+        flex-direction: column;
+    }
+    
+    .main-content {
+        height: calc(100vh - (1.5 * var(--medium-gap)) - var(--top-bar-height));
+    }
+    
+    .global-sidebar {
+        display: none;
+    }
+
+    .mobile-top-bar {
+        width: 100%;
+        height: var(--top-bar-height);
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .mobile-top-bar-button {
+        background-color: transparent;
+        border: none;
+        color: var(--primary-bg);
+        font-family: var(--main-font);
+        
+    }
+
+    .mobile-top-bar-button i {
+        font-size: var(--icon-size);
+    }
 }
