--- a/views/eventDetails.hbs
+++ b/views/eventDetails.hbs
@@ -3,7 +3,7 @@
 <div class="main-content container">
     <div class="top-page-bar">
         <button class="back-button">
-            <a class="back-button-wrapper" href="/event-list">
+            <a class="back-button-wrapper button-wrapper" href="/event-list">
                 <i class="lni lni-arrow-left"></i>
                 <p>Back</p>
             </a>
