--- a/public/common/global.css
+++ b/public/common/global.css
@@ -5,7 +5,7 @@
     --primary-fg: #3a3434;
     --secondary-fg: #919191;
     --sidebar-fg: #ffffff;
-    --sidebar-bg: #3a343499;
+    --sidebar-bg: #3a3434aa;
     --border-light: #afa7a1;
     --border-dark: #6e6a67;
     --accent-light: #e7b861;
@@ -474,7 +474,18 @@ a {
     }
     
     .global-sidebar {
-        display: none;
+        position: absolute;
+        top: calc(var(--top-bar-height) + (2 * var(--small-gap)));
+        z-index: 1000;
+        width: calc(100vw - (2 * var(--small-gap)));
+        height: calc(100vh - (1.5 * var(--top-bar-height)));
+        margin: 0;
+        opacity: 0;
+        transform: scale(0.98);
+        pointer-events: none;
+        backdrop-filter: blur(20px);
+
+        transition: opacity 0.25s, transform 0.15s;
     }
 
     .mobile-top-bar {
@@ -489,7 +500,7 @@ a {
         border: none;
         color: var(--primary-bg);
         font-family: var(--main-font);
-        
+        cursor: pointer;
     }
 
     .mobile-top-bar-button i {
