--- a/views/partials/sidebar.hbs
+++ b/views/partials/sidebar.hbs
@@ -1,11 +1,11 @@
 <div class="sunlight"></div>
 
 <nav class="mobile-top-bar">
-    <button class="mobile-top-bar-button button">
+    <button class="mobile-top-bar-button button" id="mobile-nav-button">
         <i class="lni lni-menu-hamburger-1"></i>
-</button>
+    </button>
 </nav>
-<nav class="global-sidebar">
+<nav class="global-sidebar" id="global-sidebar">
     <section>
         <header class="logo">
             <div class="logo-image"></div>
