--- a/views/login.hbs
+++ b/views/login.hbs
@@ -10,14 +10,14 @@
 
     <section>
         <h1 class="header">Welcome back</h1>
-        <form class="login-input-form">
-            <input type="text" placeholder="Mobile number" name="number" class="login-field" />
-            <input type="text" placeholder="Password" name="password" class="login-field" />
-            <button class="login-button button">
-                <i class="lni lni-enter"></i>
-                <p>Login</p>
-            </button>
-        </form>
+        <form class="login-input-form" method="POST" action="/login">
+        <input type="text" placeholder="Mobile number" name="number" class="login-field" />
+        <input type="text" placeholder="Password" name="password" class="login-field" />
+        <button class="login-button button">
+            <i class="lni lni-enter"></i>
+            <p>Login</p>
+        </button>
+    </form>
     </section>
 
     <section class="forgot">
