fixed login to eventlist routing

--- a/views/partials/sidebar.hbs
+++ b/views/partials/sidebar.hbs
@@ -80,8 +80,8 @@
                     <div class="link-name">
                         <div class="profile-picture image"></div>
                         <div class="profile-info">
-                            <p class="username">John Doe</p>
-                            <p class="user-role">Manager</p>
+                            <p class="username">{{user.firstName}} {{user.lastName}}</p>
+                            <p class="user-role">{{user.role}}</p>
                         </div>
                     </div>
                     <i class="lni lni-arrow-right"></i>
