--- a/views/notifications.hbs
+++ b/views/notifications.hbs
@@ -2,12 +2,10 @@
 <section class="main-content container">
     <h1 class="header"> Notifications </h1>
     <div class="upcoming-events-container">
-        {{>notification}}
-        {{>notification}}
-        {{>notification}}
-        {{>notification}}
-        {{>notification}}
-        {{>notification}}
-        {{>notification}}
+        {{#each notifications}}
+            {{> notification this}}
+        {{else}}
+            <p>No notifications available.</p>
+        {{/each}}
     </div>
 </section>
