--- a/views/partials/notification.hbs
+++ b/views/partials/notification.hbs
@@ -1,32 +1,32 @@
 <div class="event-box container">
     <div class="event-box-top">
-        <span id="event-name">Event Name</span>
-        <span id="client-name">Client Name</span>
+        <span class="event-name">{{data.eventName}}</span>
+        <span class="client-name">{{data.clientName}}</span>
     </div>
     <div class="event-box-bottom">
-        <span id="date">Date</span>
-        <span>Description</span>
-        <span id="description">Duis sunt dolor cupidatat incididunt magna eiusmod adipisicing 
-            fugiat reprehenderit. Aute et dolore ullamco mollit ex laborum ea 
-            magna consectetur minim reprehenderit fugiat aliqua cillum do. Sunt culpa 
-            incididunt dolor Lorem velit qui officia deserunt elit incididunt duis cupidatat nisi do officia.</span>
+        <span class="notif-date">{{data.date}}</span>
+        <span class="notif-description-label">Description</span>
+        <span class="notif-description">{{data.description}}</span>
     </div>
-    <div class="notif-controls">
-        <span class="notif-expiry">Invitation expires in 3 days.</span>
-        <div class="notif-buttons">
-            <button class="bg-button">
-                <a class="bg-button-wrapper" href="#">
-                    <i class="lni lni-thumbs-down-3"></i>
-                    <p>Not available</p>
-                </a>
-            </button>
 
-            <button class="fg-button">
-                <a class="fg-button-wrapper" href="#">
-                    <i class="lni lni-thumbs-up-3"></i>
-                    <p>Available</p>
-                </a>
-            </button>
+    {{#if (eq type "event_invite")}}
+        <div class="notif-controls">
+            <span class="notif-expiry">Invitation expires in {{data.daysLeft}} days.</span>
+            <div class="notif-buttons">
+                <button class="bg-button">
+                    <a class="bg-button-wrapper" href="#">
+                        <i class="lni lni-thumbs-down-3"></i>
+                        <p>Not available</p>
+                    </a>
+                </button>
+
+                <button class="fg-button">
+                    <a class="fg-button-wrapper" href="#">
+                        <i class="lni lni-thumbs-up-3"></i>
+                        <p>Available</p>
+                    </a>
+                </button>
+            </div>
         </div>
-    </div>
+    {{/if}}
 </div>
