--- a/views/partials/notification.hbs
+++ b/views/partials/notification.hbs
@@ -7,7 +7,13 @@
         {{else if (eq type "change_pw_request")}}
           <strong>Password Reset Request</strong>
         {{else if (eq type "general_notif")}}
-          <strong>Notification</strong>
+          <strong>
+            {{#if data.isUrgent}}
+              {{data.eventTitle}}
+            {{else}}
+              Notification
+            {{/if}}
+          </strong>
         {{else if (eq type "event_invite_response")}}
           <strong>{{data.eventName}} Invite Response</strong>
         {{/if}}
