--- a/views/login.hbs
+++ b/views/login.hbs
@@ -10,14 +10,12 @@
 
     <section>
         <h1 class="header">Welcome back</h1>
-        <form class="login-input-form">
+        <form class="login-input-form" action="/login" method="post">
             <input type="text" placeholder="Mobile number" name="number" class="login-field" />
             <input type="text" placeholder="Password" name="password" class="login-field" />
-            <button class="login-button button">
-                <a class="login-button-wrapper button-wrapper" href="#">
-                    <i class="lni lni-enter"></i>
-                    <p>Login</p>
-                </a>
+            <button class="login-button button" type="submit">
+                <i class="lni lni-enter"></i>
+                <p>Login</p>
             </button>
         </form>
     </section>
