--- a/views/partials/notification.hbs
+++ b/views/partials/notification.hbs
@@ -16,6 +16,13 @@
         <div class="notif-buttons">
             <button class="bg-button button">
                 <a class="bg-button-wrapper button-wrapper" href="#">
+                    <i class="lni lni-trash-3"></i>
+                    <p>Delete</p>
+                </a>
+            </button>
+            
+            <button class="bg-button button">
+                <a class="bg-button-wrapper button-wrapper" href="#">
                     <i class="lni lni-thumbs-down-3"></i>
                     <p>Not available</p>
                 </a>
@@ -27,6 +34,7 @@
                     <p>Available</p>
                 </a>
             </button>
+
         </div>
     </div>
 </div>
