fixed/finalized event list page permission bugs

--- a/views/eventList.hbs
+++ b/views/eventList.hbs
@@ -9,12 +9,14 @@
             <input type="search" name="q" placeholder="Search...">
         </form>
 
+    {{#if showCreateButton}}
         <div class="fg-button button">
             <a class="fg-button-wrapper button-wrapper" href="#">
                 <i class="lni lni-plus"></i>
                 <p>Create</p>
             </a>
         </div>
+    {{/if}}  
     </div>
 
     <div class="upcoming-events-container">
