--- a/views/eventList.hbs
+++ b/views/eventList.hbs
@@ -1,27 +1,23 @@
-{{>sidebar}}
-<script src="/common/javascript/eventList.js"></script>
-<section class="main-content container">
-    <h2 class="header">Upcoming Events</h2>
+<h2 class="header">Upcoming Events</h2>
 
-    <div class="event-list-top">
-        <form role="search" class="search-bar">
-            <button type="submit"><i class="lni lni-search-1"></i></button>
-            <input type="search" name="q" placeholder="Search...">
-        </form>
+<div class="event-list-top">
+    <form role="search" class="search-bar">
+        <button type="submit"><i class="lni lni-search-1"></i></button>
+        <input type="search" name="q" placeholder="Search...">
+    </form>
 
-        <div class="fg-button button">
-            <a class="fg-button-wrapper button-wrapper" href="#">
-                <i class="lni lni-plus"></i>
-                <p>Create</p>
-            </a>
-        </div>
+    <div class="fg-button button">
+        <a class="fg-button-wrapper button-wrapper" href="/create/event">
+            <i class="lni lni-plus"></i>
+            <p>Create</p>
+        </a>
     </div>
+</div>
 
-    <div class="upcoming-events-container">
-        {{#each events}}
-            {{>eventBox this}}
-        {{else}}
-            <p>No events found</p>
-        {{/each}}
-    </div>
-</section>
+<div class="upcoming-events-container">
+    {{#each events}}
+        {{>eventBox this}}
+    {{else}}
+        <p>No events found</p>
+    {{/each}}
+</div>
