--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -3,9 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Event Details | Team VacaSpec Event Hub</title>
+    <title>{{title}} | Team VacaSpec Event Hub</title>
     <link rel="stylesheet" href="/common/global.css">
-    <link rel="stylesheet" href="/common/eventDetails.css">
+    
+    {{#if stylesheet}}
+        <link rel="stylesheet" href="/common/{{stylesheet}}.css">
+    {{/if}}
+    {{#if script}}
+        <script src="/common/javascript/{{script}}.js"></script>
+    {{/if}}
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
@@ -13,6 +20,9 @@
     <script src="/common/javascript/sidebar.js"></script>
 </head>
 <body>
-    {{{body}}}
+    {{>sidebar}}
+    <div class="main-content container">
+        {{{body}}}
+    </div>
 </body>
 </html>
