--- a/views/partials/sidebar.hbs
+++ b/views/partials/sidebar.hbs
@@ -16,7 +16,7 @@
     <section>
         <ul class="nav-link-section">
             {{#if (eq page "upcoming-events")}}
-                <a class="nav-link-wrapper" href="/event-list">
+                <a class="nav-link-wrapper" href="/eventlist">
                     <li class="nav-link" id="active-link">
                         <div class="link-name">
                             <i class="lni lni-calendar-days"></i>
@@ -26,7 +26,7 @@
                     </li>
                 </a>
             {{else}}
-                <a class="nav-link-wrapper" href="/event-list">
+                <a class="nav-link-wrapper" href="/eventlist">
                     <li class="nav-link">
                         <div class="link-name">
                             <i class="lni lni-calendar-days"></i>
