--- a/views/partials/eventBox.hbs
+++ b/views/partials/eventBox.hbs
@@ -1,4 +1,5 @@
 <div class="event-box container"
+    data-id="{{_id}}"
     data-cp-first-name="{{CPFirstName}}"
     data-cp-last-name="{{CPLastName}}"
     data-cp-contact-no="{{CPContactNo}}"
