--- a/views/partials/sidebar.hbs
+++ b/views/partials/sidebar.hbs
@@ -26,7 +26,7 @@
                     </li>
                 </a>
             {{else}}
-                <a class="nav-link-wrapper" href="/event-list">
+                <a class="nav-link-wrapper" href="/eventList">
                     <li class="nav-link">
                         <div class="link-name">
                             <i class="lni lni-calendar-days"></i>
