--- a/views/partials/teamMember.hbs
+++ b/views/partials/teamMember.hbs
@@ -8,6 +8,6 @@
     <div class="team-member-details">
         <span id="full-name">{{firstName}} {{lastName}}</span>
         <span id="role">{{role}}</span>
-        <span id="contact-no">{{_id}}</span>
+        <span id="contact-no">{{formatPhone _id}}</span>
     </div>
 </div>
