fix: event details view container is now a card

--- a/views/eventDetails.hbs
+++ b/views/eventDetails.hbs
@@ -9,16 +9,15 @@
 </div>
 
 
-    <div class="event-details container">
-
-        {{#if showButtons}}
-        <button class="bg-button button" id="details-edit-button">
-            <a class="bg-button-wrapper button-wrapper" href="#">
-                <i class="lni lni-pencil-1"></i>
-                <p>Edit</p>
-            </a>
-        </button>
-        {{/if}}
+<div class="event-details card">
+    {{#if showButtons}}
+    <button class="bg-button button" id="details-edit-button">
+        <a class="bg-button-wrapper button-wrapper" href="#">
+            <i class="lni lni-pencil-1"></i>
+            <p>Edit</p>
+        </a>
+    </button>
+    {{/if}}
 
     <div class="event-box-top" id="details-top-box">
         <span id="event-name"></span>
