--- a/views/eventList.hbs
+++ b/views/eventList.hbs
@@ -8,7 +8,7 @@
 
     {{#if showCreateButton}}
         <div class="fg-button button">
-            <a class="fg-button-wrapper button-wrapper" href="#">
+            <a class="fg-button-wrapper button-wrapper" href="/create/event">
                 <i class="lni lni-plus"></i>
                 <p>Create</p>
             </a>
